--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zxx">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -138,17 +138,35 @@
     </div>
   </div>
   <div class="page-softwere">
-      <img src="#" alt="computer">
-      <div>
-          <div class="icon"></div>
-          <h2>Grab Your  Software <br> With Amazing  Features</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, 
+    <div class="page-softwere-img"></div>
+    <div class="wrap page-softwere-flex">
+        <div>
+        <div class="page-softwere-icon"></div>
+    
+        <h2 class="title-h2">Grab Your  Software <br> With Amazing  Features</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, 
             sed do eiusmod tempor incididunt ut labore et dolore magna 
             aliqua. Ut enim ad minim veniam, quis nostrud exercitation 
             ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis 
             aute irure dolor in reprehenderit in voluptate velit esse cillum.
         </p>
-        <dl>
+        <dl class="page-softwere-list">
+            <dt>01. Clean Design</dt>
+            <dd>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, 
+                sed do eiusmod tempor incididunt ut labore et dolore magna
+                aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                Duis aute irure dolor in reprehenderit in voluptate velit 
+                esse cillum.
+            </dd>
+            <dt>02. Easy To Customize</dt>
+            <dd>Lorem ipsum dolor sit amet, consectetur adipisicing elit, 
+                sed do eiusmod tempor incididunt ut labore et dolore magna 
+                aliqua. Ut enim ad minim veniam, quis nostrud exercitation 
+                ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                Duis aute irure dolor in reprehenderit in voluptate velit 
+                esse cillum.</dd>
             <dt>01. Clean Design</dt>
             <dd>
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, 
@@ -157,6 +175,22 @@
                     ullamco laboris nisi ut aliquip ex ea commodo consequat.
                     Duis aute irure dolor in reprehenderit in voluptate velit 
                     esse cillum.
+                </dd>
+            <dt>02. Easy To Customize</dt>
+            <dd>Lorem ipsum dolor sit amet, consectetur adipisicing elit, 
+                sed do eiusmod tempor incididunt ut labore et dolore magna 
+                aliqua. Ut enim ad minim veniam, quis nostrud exercitation 
+                ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                Duis aute irure dolor in reprehenderit in voluptate velit 
+                esse cillum.</dd>
+                <dt>01. Clean Design</dt>
+            <dd>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, 
+                sed do eiusmod tempor incididunt ut labore et dolore magna
+                aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                Duis aute irure dolor in reprehenderit in voluptate velit 
+                esse cillum.
             </dd>
             <dt>02. Easy To Customize</dt>
             <dd>Lorem ipsum dolor sit amet, consectetur adipisicing elit, 
@@ -166,6 +200,7 @@
                 Duis aute irure dolor in reprehenderit in voluptate velit 
                 esse cillum.</dd>
         </dl>
+        </div>
     </div>
 </div>
   <div class="page-stat">
@@ -364,7 +399,7 @@
                 No Need Credit Card.
             </h2>
             <img src="img/screen4.png" alt="chart">
-            <form action="">
+            <form action="#">
                 <input type="text" placeholder="Enter your name here">
                 <input type="email" placeholder="Enter your email here">
                 <textarea name="textMessage" placeholder="Enter your message here"></textarea>
@@ -373,8 +408,7 @@
     </div>
     <div class="footer">
         <div>
-            <p>
-                Made With Love & Copyright By - <a href=""> limpon</a>
+            <p> Made With Love & Copyright By - <a href=""> limpon</a></p>
                 <ul class="sohial">
                     <li><a href="" target="_blank"></a></li>
                     <li><a href="" target="_blank"></a></li>
@@ -382,7 +416,7 @@
                     <li><a href="" target="_blank"></a></li>
                     <li><a href="" target="_blank"></a></li>
                 </ul>
-            </p>
+            
         </div>
     </div>
 </body>
