--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
     <div class="page-softwere-img"></div>
     <div class="wrap page-softwere-flex">
         <div>
-        <div class="page-softwere-icon"></div>
+        <div class="settings-icon"></div>
     
         <h2 class="title-h2">Grab Your  Software <br> With Amazing  Features</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, 
@@ -218,38 +218,38 @@
   </div>
 
   <div class="page-app">
-      <div>
-          <div>
-              <h2>Meet With <br> Future Landingpage</h2>
+      <div class="wrap">
+          <div class="page-app-content">
+              <h2 class="title-h2">Meet With Future&nbsp;Landingpage</h2>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</p>
-              <p>Available Now</p>
-              <ul>
-                  <li><a href="" target="_blank"></a></li>
-                  <li><a href="" target="_blank"></a></li>
+              <p class="page-app-text">Available Now</p>
+              <ul class="page-app-list">
+                  <li><a class="page-app-android" href="" target="_blank"></a></li>
+                  <li><a class="page-app-ios" href="" target="_blank"></a></li>
               </ul>
               
           </div>
-          <img src="img/video.png" alt="video">
+          <a href="#" class="video-app"><img src="img/video.png" alt="video"></a>
       </div>
   </div>
   <div class="page-analytics">
-      <div>
+      <div class="wrap flex-analytics">
           <img src="img/screen2.png" alt="chart">
           <div>
-              <img src="#" alt="icon">
-              <h2>Limpon Is Suitable For <br> Anytype LandingPage</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</p>
+                <div class="settings-icon"></div>
+              <h2 class="title-h2 page-analytics-title">Limpon Is Suitable For <br> Anytype LandingPage</h2>
+              <p class="page-analytics-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</p>
               <a href="#" class="btn-primary">get started now </a>
           </div>
       </div>
   </div>
-  <div class="page-analytics">
-        <div>
+  <div class="page-analytics-left">
+        <div class="wrap flex-analytics-left">
              <div>
-                <img src="#" alt="icon">
-                <h2>Easy To Etid & <br> Very Easily Control</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</p>
-                <a href="#" class="btn-primary">learn more</a> 
+                <div class="settings-icon"></div>
+                <h2 class="title-h2 page-analytics-title">Easy To Etid & <br> Very Easily Control</h2>
+                <p class="page-analytics-title-left">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</p>
+                <a href="#" class="btn-primary page-analytics-left-btn">learn more</a> 
             </div>
             <img src="img/screen3.png" alt="chart">
         </div>
